Fix contrast errors

--- a/Social Network Frontend/src/styles/style.scss
+++ b/Social Network Frontend/src/styles/style.scss
@@ -762,7 +762,6 @@ form {
 
         .username {
             font-size: 20px;
-            color: #555;
             margin-bottom: 10px;
 
             @include media($breakpoint-medium) {
@@ -773,10 +772,6 @@ form {
 
     .bio {
         margin-bottom: 10px;
-    }
-    
-    .birthdate {
-        color: #777;
     }
 
     .profile-stats {
@@ -948,7 +943,7 @@ form {
         }
         
         .delete-btn {
-            background-color: red;
+            background-color: crimson;
             color: white;
             border: none;
             padding: 5px 10px;
@@ -1076,7 +1071,7 @@ form {
     }
   
     .delete-button {
-      background-color: red;
+      background-color: crimson;
       color: white;
       border: none;
       padding: 10px;
